# Cenith

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  test.ccc
cenith/include/: allocator.h  cstrings.h  ir.h  lexer.h  parser.h
cenith/src/: file.c  ir.c  lexer.c  parser.c
cvm/: README.md  assembler.py  cvm.py
examples/: test.cenith
include/: allocator.h  compilation.h  cstrings.h  file.h  ir.h  lexer.h  parser.h
src/: allocator.c  assembler.rs  cenith.c  compilation.c  cstrings.c  instruction.rs  ir.c  lexer.c  lexer.rs  main.c  main.rs  parser.c  parser.rs  tokens.rs
src/manager/: function.rs
stdlib/: CMakeLists.txt
stdlib/include/: allocator.h  file.h  hstring.h
stdlib/src/: allocator.c  file.c  hstring.c
tests/: Makefile  main.c  test.cenith  test.s
